# C-Programming

./: README.md
0_hello_world/: README.md  hello_asm.c
10_recursion/: recurs.c
11_struct/: struct.c
12_libs/: func.c  header.h  main.c
13_make_cmake/cmake0/: CMakeLists.txt
13_make_cmake/cmake1/: CMakeLists.txt
13_make_cmake/make0/: main.c
13_make_cmake/make1/: Makefile
14_linkedLists/: double_ll.c  list_funcs.c
15_text_files/: files.c
16_binary_files/: binary.c
1_hello_types/: README.md  format.c  types.c
2023-2024/0_hello_world/: hello_asm.c
2023-2024/12_libs/: README.md
2023-2024/14_linkedLists/: list.c  list2.c
2023-2024/15_text_files/: file.m
2023-2024/1_hello_types/: types.c
2023-2024/3_loops/: while.c
2023-2024/4_bitwise_operations/: printf.c
2023-2024/5_arrays/: arrays.c
2023-2024/7_string/: string.c
2023-2024/8_functions/: func.c
2023-2024/more_tasks/: tasks.c
2023-2024/slides/: 0_Introduction.pptx  2_conditions.pptx  3_loops.pptx  4_bitwise_operations.pptx  6_matrices.pptx
2024-2025/: README.md  README.md.md
2024-2025/0_hello_world/: hello_world.c
2024-2025/1_hello_types/: constants.c
2024-2025/2_conditions/: logical_errors.c  true_false.c
2024-2025/3.5_functions_p1/: calculator.c  proto.c  sum.c  void_funcs.c
2024-2025/3_loops/: break.c  continue.c  for_loop.c  for_variations.c  nested_break.c  nested_continue.c  semicolons.c  while.c  while_negative.c
2024-2025/4_bitwise_operations/: bitwise_ops.c
2024-2025/5.1_pointers/: pointer.c  ptr_to_ptr.c
2024-2025/5.2_dynamic_arrays/: calloc.c  realloc.c
2024-2025/5_static_arrays/: array_assign.c  array_init.c  avg_score.c  rand.c  string_array.c  string_functions.c
2024-2025/6_functions_p2/: args.c  callback.c  dog.c  func_ptr.c
2024-2025/7_struct_union/: bits.c  cats_array.c  enum.c  typedef.c  union.c
2024-2025/8.1_valgrind_sanitizer/: ex2.c
2024-2025/8_gdb/: ex3.c  ex4.c  ex5.c
2024-2025/Git/: CMakeLists.txt  Git.md
2024-2025/algorithms/: 2_linked_lists.pptx  singly_list.c
2024-2025/algrorithms/: Linked_lists.md  bigO.md
2024-2025/arrays_poiinters_dynamic/: array_func.c  bubble_sort.c  malloc.c  matrix.c  mem.c  mem_leak.c  my_name_is.c  ptr_math.c  string.c
2024-2025/bitwise_ops/: 4_bitwise_operations.pptx  printf.c  shift.c
2024-2025/clean_code/: clean_code.md
2024-2025/clean_n_safe_code/: clean_code.md
2024-2025/cpp_basics/: cpp_start.md
2024-2025/data_struct_unions/: 7_struct_union.pptx  cats.c  padding.c
2024-2025/debug_gdb_valgrind/: gdb_ex1.c  gdb_ex2.c  mem_ex1.c
2024-2025/files/: binary.c  binary_bmp.c  files.md  text.c
2024-2025/functions/: args.c  cow.c  dangling_ptr.c  dog.c  functions.c  max.c  recurs.c  va_arg.c  void_funcs.c
2024-2025/hello_world/: 1_hello_world.pptx  README.md  hello_gcc.c
2024-2025/libraries/: 5_libraries.pptx  CMakeLists.txt  README.md  libraries.md
2024-2025/libraries/include/: log.h
2024-2025/libraries/src/: app.c  log.c
2024-2025/linked_lists/: linked_list.md
2024-2025/loops/: brackets.c  do_while.c  figure.c  loops.pptx  meow.c  nested_for.c  unroll.c
2024-2025/make_cmake_projects/: qualifiers.md
2024-2025/make_cmake_projects/cmake2/: CMakeLists.txt  main.c
2024-2025/preprocessor/: preprocessor.pptx
2024-2025/slides_pptx/: 1_sem_short.md  2.5_conditions.pptx  2_types_and_conds.pptx  3.5_functions_p1.pptx  3_loops.pptx  4_bitwise_operations.pptx  5.1_pointers.pptx  5.2_dynamic_arrays.pptx  5_static_arrays.pptx  6_functions_p2.pptx  7_struct_union.md  8.1_valgrind_sanitizer.md  8_GDB.md  9.1_qualifiers.md  9_make_cmake.md
2024-2025/sw_testing/: 7_testing.pptx  testing.md
2024-2025/sw_testing/testing/: CMakeLists.txt  README.md
2024-2025/sw_testing/testing/app/: example.c
2024-2025/sw_testing/testing/cipher/: CMakeLists.txt  aes.c  aes.h  snow3g.c  snow3g.h
2024-2025/sw_testing/testing/cipher_api/: CMakeLists.txt  cipher_api.c  cipher_api.h  cipher_defs.h  stream_eea0.c  stream_eea0.h  stream_eea1.c  stream_eea1.h  stream_eea2.c  stream_eea2.h
2024-2025/sw_testing/testing/tests/: CMakeLists.txt
2024-2025/threads/: 6_threads.pptx  threads.md
2024-2025/types_and_conds/: arithmetic.c  condition_errors.c  conditions.c  format.c  scanf.c  switch_case.c  ternary_op.c  type_cast.c  types.c
2_conditions/: conditions.c  switch.c
3_loops/: figure.c  for.c  while.c
4_bitwise_operations/: bitwise_ops.c  printf.c
5_arrays/: arrays.c
6_matrices/: matrix.c
8_functions/: func.c
9_functions/: func.c
9_gdb/: example.c
9_recursion/: recurs.c
slides/: 0_Introduction.pptx  1_hello_types.pptx  2_conditions.pptx  3_loops.pptx  5_arrays.pptx  Introduction.pptx
(+70 files in other folders)
